--- a/index.html
+++ b/index.html
@@ -4,114 +4,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cửa Hàng Bán Sách</title>
-    <link rel="stylesheet" href="sp.css">
+    <title>Nguyễn Hữu Nhâm</title>
+    <link rel="stylesheet" href="nham.css">
 </head>
 
 <body>
     <header>
-        <div id="logo">
-            <img src="logo.png" alt="Logo Cửa Hàng Sách">
-        </div>
-        <nav>
+        <h1 align="center">TIN TỨC NGÀY HÔM NAY</h1>
+        <div class="menu">
             <ul>
-                <li><a href="">Trang Chủ</a></li>
-                <li><a href="">Sách Mới</a></li>
-                <li><a href="">Sách Bán Chạy</a></li>
-                <li><a href="">Giới Thiệu</a></li>
-                <li><a href="">Đăng Nhập - Đăng Ký</a></li>
+                <li><img src="image/logo.jpg" alt=""></li>
+                <li>Thời Sự
+                    <ul class="sub-menu-1">
+                        <li>Chính Trị</li>
+                        <li>Dân Sinh</li>
+                        <li>Giao Thông</li>
+                        <li>Hành Động</li>
+                        <li>Quỹ Hi Vọng</li>
+                    </ul>
+                </li>
+                <li>Góc Nhìn
+                    <ul class="sub-menu-2">
+                        <li>Bình Luận</li>
+                        <li>Y Tế & Sức Khỏe</li>
+                        <li>Môi Trường</li>
+                        <li>Tác Giả</li>
+                        <li>Văn Hóa Và Lối Sống</li>
+                    </ul>
+                </li>
+                <li>Thế Gới
+                    <ul class="sub-menu-3">
+                        <li>Tư Liệu</li>
+                        <li>Phân Tích</li>
+                        <li>Quân Sự</li>
+                        <li>Cuộc Sống</li>
+                        <li>Người Việt 5 Châu</li>
+                    </ul>
+                </li>
+                <li>Kinh Doanh
+                    <ul class="sub-menu-4">
+                        <li>Quốc Tế</li>
+                        <li>Doanh Nghiệp</li>
+                        <li>Chứng Khoán</li>
+                        <li>Bảo Hiểm</li>
+                        <li>Hàng Hóa</li>
+                    </ul>
+                </li>
+                <li>Khoa Học
+                    <ul class="sub-menu-6">
+                        <li>Tin Tức</li>
+                        <li>Phát Minh</li>
+                        <li>Ứng Dụng</li>
+                        <li>Thưởng Thức</li>
+                        <li>Sáng Kiến KH 2024</li>
+                    </ul>
+                </li>
+                <li>Giải Trí
+                    <ul class="sub-menu-7">
+                        <li>Sách</li>
+                        <li>Video</li>
+                        <li>Phim Nhạc</li>
+                        <li>Thời Trang</li>
+                        <li>Làm Đẹp</li>
+                    </ul>
+                </li>
+                <li>Đời Sống
+                    <ul class="sub-menu-8">
+                        <li>Nhịp Sống</li>
+                        <li>Tổ Ấm</li>
+                        <li>Bài Học Sống</li>
+                        <li>Cooking</li>
+                        <li>Tiêu Dùng</li>
+                    </ul>
+                </li>
+                <li>
+                    <form action="">
+                        <input type="text" id="search" placeholder="🔍 Tìm Kiếm">
+                    </form>
+                </li>
             </ul>
-        </nav>
-        <h1>Danh mục sản phẩm</h1>
+        </div>
     </header>
     <main>
-        <!-- secoin 1 -->
-        <section class="secoin">
-            <h2>Danh mục mới</h2>
-            <div id="product">
-                <!-- sản phẩm số 1 -->
-                <div id="product">
-                    <img src="sach1.jpg" alt="Sách số 1">
-                    <h3>Sách Wibu</h3>
-                    <p>Giá Bán: 150.000 vnđ</p>
-                    <button>Mua Ngay</button>
-                </div>
-                <!-- sản phẩm số 2 -->
-                <div id="product">
-                    <img src="sach2.jpg" alt="Sách số 2">
-                    <h3>Sách Phật</h3>
-                    <p>Giá Bán: 250.000 vnđ</p>
-                    <button>Mua Ngay</button>
-                </div>
-                <!-- sản phẩm số 3 -->
-                <div id="product">
-                    <img src="sach3.jpg" alt="Sách số 3">
-                    <h3>Sách Sách Thế Giới</h3>
-                    <p>Giá Bán: 200.000 vnđ</p>
-                    <button>Mua Ngay</button>
-                </div>
-        </section>
-        <!-- section 2 -->
-        <section class="secoin">
-            <h2>Danh mục bán chạy</h2>
-            <div class="product">
-                <!-- sản phẩm số 4 -->
-                <img src="sach4.jpg" alt="Sách số 4">
-                <h3>Sách Làm Giàu</h3>
-                <p>Giá Bán: 300.000 vnđ</p>
-                <button>Mua Ngay</button>
-            </div>
-            <!-- sản phẩm số 5 -->
-            <div class="product">
-                <img src="sach5.jpg" alt="Sách số 5">
-                <h3>Sách Phật</h3>
-                <p>Giá Bán: 250.000 vnđ</p>
-                <button>Mua Ngay</button>
-            </div>
-            <!-- sản phẩm số 6 -->
-            <div class="product">
-                <img src="sach6.jpg" alt="Sách số 6">
-                <h3>Sách Lego</h3>
-                <p>Giá Bán: 200.000 vnđ</p>
-                <button>Mua Ngay</button>
-            </div>
-            <!-- sản phẩm số 7 -->
-            <div class="product">
-                <img src="sach7.jpg" alt="Sách số 7">
-                <h3>Sách Ma</h3>
-                <p>Giá Bán: 200.000 vnđ</p>
-                <button>Mua Ngay</button>
-            </div>
-            <!-- sản phẩm số 8 -->
-            <div class="product">
-                <img src="sach8.jpg" alt="Sách số 8">
-                <h3>Sách Pháp Y</h3>
-                <p>Giá Bán: 200.000 vnđ</p>
-                <button>Mua Ngay</button>
-            </div>
-            <!-- sản phẩm số 9 -->
-            <div class="product">
-                <img src="sach9.jpg" alt="Sách số 9">
-                <h3>Sách Hiểu Về Trái Tim</h3>
-                <p>Giá Bán: 200.000 vnđ</p>
-                <button>Mua Ngay</button>
-            </div>
         <section>
-            <!-- 4 -->
-            <section class="section">
-                <h2>Liên Hệ</h2>
-                <form action="">
-                    <label for="name">Họ Và Tên</label>
-                    <input type="text" id="name" name="name"><br>
-                    <label for="email">Email</label>
-                    <input type="text" id="email" name="email"><br>
-                    <label for="message">Nội Dung</label>
-                    <input type="text" id="message" name="message"><br>
-                    <button type="submit">Gửi</button>               
-                </form>
-            </section>
+            <div class="produc">
+                <img src="image/anh2.jpg" alt="">
+                <p>Miền Bắc Đang Trải Qua Đợt Rét Đậm Hiếm Gặp</p>
+            </div>
+            <nav class="list-tin">
+                <div class="product1">
+                    <img src="image/anh3.jpg" alt="">
+                    <p>Cướp Tiệm Vàng Bằng Súng</p>
+                </div>
+                <div class="product2">
+                    <img src="image/anh4.jpg" alt="">
+                    <p>Ukraine thay loạt chỉ huy lữ đoàn ở tiền tuyến</p>
+                </div>
+                <div class="product3">
+                    <img src="image/anh5.png" alt="">
+                    <p>Tuyển thủ điền kinh Việt Nam vô địch giải chạy vì bị chó rượt</p>
+                </div>
+                <div class="product4">
+                    <img src="image/anh6.jpg" alt="">
+                    <p>Ông Trump thắng đồng loạt vòng sơ bộ ở ba bang</p>
+                </div>
+                <div class="product5">
+                    <img src="image/anh7.jpg" alt="">
+                    <p>Cuộc sống di động theo mùa gió trên đảo phía Tây Nam</p>
+                </div>
+            </nav>
         </section>
-    </main>
-</body>
+        <section>
+            <nav class="list-tin1">
+                <div class="product6">
+                    <img src="image/anhh1.jpg" alt="">
+                    <p>Cuộc 'giải cứu' gia đình 7 người trên xe máy</p>
+                </div>
+                <div class="product7">
+                    <img src="image/anhh2.jpg" alt="">
+                    <p>Màn ngược dòng vô địch chạy đêm TP HCM của Đan Quyết</p>
+                </div>
+                <div class="product8">
+                    <img src="image/anhh3.jpg" alt="">
+                    <p>Messi lập cú đúp bằng đầu và ngực</p>
+                </div>
+                <div class="product9">
+                    <img src="image/anhh4.jpg" alt="">
+                    <p>Bác sĩ Hàn Quốc chuẩn bị biểu tình quy mô lớn</p>
+                </div>
+                <div class="product10">
+                    <img src="image/anhh5.jpg" alt="">
+                    <p>Lương IT phần mềm Việt đang giảm thế nào</p>
+                </div>
+            </nav>
+        </section>
 
+    </main>
+    <footer>
+        <table>
+            <tr>
+                <td width="300px"><img src="image/shop.png" alt="" width="150px"></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td width="100px"></td>
+                <td width="500px" style="font-size: 20px;"><span><sup style="font-size:25px">Trụ Sở Chính </sup></span>
+                    <br><br>
+                    Số 1 Phố Xốm,<br>Phú Lãm,Hà Đông,Hà Nội<br><br><span style="font-size:25px">Chi
+                        Nhánh</span><br><br>
+                    Đông Xuân,Trường Trung,Nông Cống,Thanh Hóa<br><br><br><br></td>
+                <td style="font-size: 20px;"><span style="font-size:25px">Hỗ trợ Khách Hàng:</span><br><br>
+                    <span style="font-size:25px">Hotline</span><br><b style="color:white">0357331453</b>(
+                    liên hệ trực tiếp )<br><br><span style="font-size:25px">Email</span><br><b
+                        style="color:white">biochinonguyen2k5@gmail.com</b><br><br>  
+                    <span style="font-size:25px">Contact</span><br><br>
+                    <a href="https://www.facebook.com/nhammsiuuucutee2005">
+                        <img src="image/logofb.jpg" alt="" width="25px">&ensp;&ensp;
+                        <a href="https://www.instagram.com/biochinonguyen2k5/">
+                            <img src="image/logoig.jpg" alt="" width="25px">&ensp;&ensp;
+                            <a href="https://www.tiktok.com/@dinonham">
+                                <img src="image/logott.jpg" alt="" width="25px">
+                </td>
+            </tr>
+        </table><br><br>
+        <marquee behavior="" direction="" scrollamount="20" style="background-color: brown;
+        color: bisque;
+        font-size: 30px;
+        height: 100px;"><b><br>Cảm Ơn Đã Ghé Thăm Trang Web</b>
+        </marquee>
+    </footer>
+</body>
 </html>
