--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 align="center">TIN TỨC NGÀY HÔM NAY</h1>
         <div class="menu">
             <ul>
-                <li><img src="image/logo.jpg" alt=""></li>
+                <li><img src="logo.jpg" alt=""></li>
                 <li>Thời Sự
                     <ul class="sub-menu-1">
                         <li>Chính Trị</li>
@@ -88,28 +88,28 @@
     <main>
         <section>
             <div class="produc">
-                <img src="image/anh2.jpg" alt="">
+                <img src="anh2.jpg" alt="">
                 <p>Miền Bắc Đang Trải Qua Đợt Rét Đậm Hiếm Gặp</p>
             </div>
             <nav class="list-tin">
                 <div class="product1">
-                    <img src="image/anh3.jpg" alt="">
+                    <img src="anh3.jpg" alt="">
                     <p>Cướp Tiệm Vàng Bằng Súng</p>
                 </div>
                 <div class="product2">
-                    <img src="image/anh4.jpg" alt="">
+                    <img src="anh4.jpg" alt="">
                     <p>Ukraine thay loạt chỉ huy lữ đoàn ở tiền tuyến</p>
                 </div>
                 <div class="product3">
-                    <img src="image/anh5.png" alt="">
+                    <img src="anh5.png" alt="">
                     <p>Tuyển thủ điền kinh Việt Nam vô địch giải chạy vì bị chó rượt</p>
                 </div>
                 <div class="product4">
-                    <img src="image/anh6.jpg" alt="">
+                    <img src="anh6.jpg" alt="">
                     <p>Ông Trump thắng đồng loạt vòng sơ bộ ở ba bang</p>
                 </div>
                 <div class="product5">
-                    <img src="image/anh7.jpg" alt="">
+                    <img src="anh7.jpg" alt="">
                     <p>Cuộc sống di động theo mùa gió trên đảo phía Tây Nam</p>
                 </div>
             </nav>
@@ -117,23 +117,23 @@
         <section>
             <nav class="list-tin1">
                 <div class="product6">
-                    <img src="image/anhh1.jpg" alt="">
+                    <img src="anhh1.jpg" alt="">
                     <p>Cuộc 'giải cứu' gia đình 7 người trên xe máy</p>
                 </div>
                 <div class="product7">
-                    <img src="image/anhh2.jpg" alt="">
+                    <img src="anhh2.jpg" alt="">
                     <p>Màn ngược dòng vô địch chạy đêm TP HCM của Đan Quyết</p>
                 </div>
                 <div class="product8">
-                    <img src="image/anhh3.jpg" alt="">
+                    <img src="anhh3.jpg" alt="">
                     <p>Messi lập cú đúp bằng đầu và ngực</p>
                 </div>
                 <div class="product9">
-                    <img src="image/anhh4.jpg" alt="">
+                    <img src="anhh4.jpg" alt="">
                     <p>Bác sĩ Hàn Quốc chuẩn bị biểu tình quy mô lớn</p>
                 </div>
                 <div class="product10">
-                    <img src="image/anhh5.jpg" alt="">
+                    <img src="anhh5.jpg" alt="">
                     <p>Lương IT phần mềm Việt đang giảm thế nào</p>
                 </div>
             </nav>
@@ -143,7 +143,7 @@
     <footer>
         <table>
             <tr>
-                <td width="300px"><img src="image/shop.png" alt="" width="150px"></td>
+                <td width="300px"><img src="shop.png" alt="" width="150px"></td>
                 <td></td>
                 <td></td>
             </tr>
